--- a/IEEApps/IEEApps/Storyboards/Base.lproj/Main.storyboard
+++ b/IEEApps/IEEApps/Storyboards/Base.lproj/Main.storyboard
@@ -353,6 +353,7 @@
                         <outlet property="logoutLabel" destination="DTR-OG-cDM" id="dgu-tS-jD2"/>
                         <outlet property="privacyPolicyLabel" destination="vbg-Ld-biJ" id="8eO-rk-1NH"/>
                         <outlet property="sourceCodeLabel" destination="Rxc-q6-Mdq" id="I0O-e9-UJ1"/>
+                        <outlet property="tagsLabel" destination="oLr-u2-obf" id="uiz-ID-1Ak"/>
                         <outlet property="termsAndConditionsLabel" destination="PWU-NI-CpG" id="jhf-Z2-ixv"/>
                     </connections>
                 </viewController>
@@ -360,39 +361,77 @@
             </objects>
             <point key="canvasLocation" x="-541" y="834"/>
         </scene>
-        <!--View Controller-->
+        <!--Tags View Controller-->
         <scene sceneID="bzn-eQ-GQF">
             <objects>
-                <viewController id="oPi-IR-9b2" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TagsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="oPi-IR-9b2" customClass="TagsViewController" customModule="IEEApps" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Sce-9L-MoW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Παρακολούθηση Πινάκων" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRj-3q-NVX">
-                                <rect key="frame" x="110.5" y="59" width="235" height="23"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W0c-de-gqZ">
                                 <rect key="frame" x="15" y="59" width="45.5" height="31"/>
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system"/>
                                 <connections>
-                                    <action selector="goBack:" destination="Wba-fc-xnd" eventType="touchUpInside" id="C6T-Gq-OEf"/>
+                                    <action selector="goBack:" destination="oPi-IR-9b2" eventType="touchUpInside" id="efB-2d-ngn"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="np7-xt-ydg">
+                                <rect key="frame" x="288" y="59" width="106" height="31"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Αποθήκευση"/>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="O2z-rr-igE">
+                                <rect key="frame" x="0.0" y="100" width="414" height="752"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="TagsCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TagsCell" id="oec-6R-vyY" customClass="TagsTableViewCell" customModule="IEEApps" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oec-6R-vyY" id="c8P-In-SxT">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JSt-BS-Ypk">
+                                                    <rect key="frame" x="25" y="15" width="369" height="16.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="JSt-BS-Ypk" firstAttribute="leading" secondItem="c8P-In-SxT" secondAttribute="leadingMargin" constant="5" id="6Na-Iu-mau"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="JSt-BS-Ypk" secondAttribute="trailing" id="Abz-my-ZRS"/>
+                                                <constraint firstItem="JSt-BS-Ypk" firstAttribute="top" secondItem="c8P-In-SxT" secondAttribute="top" constant="15" id="F4a-ju-Zch"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="JSt-BS-Ypk" secondAttribute="bottom" constant="7.5" id="cjp-id-asy"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="titleLabel" destination="JSt-BS-Ypk" id="lUL-xR-Ffn"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jn1-A2-heg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="dRj-3q-NVX" firstAttribute="top" secondItem="jn1-A2-heg" secondAttribute="top" constant="15" id="9oI-Px-zsE"/>
+                            <constraint firstItem="np7-xt-ydg" firstAttribute="top" secondItem="jn1-A2-heg" secondAttribute="top" constant="15" id="JQJ-4r-pCu"/>
                             <constraint firstItem="W0c-de-gqZ" firstAttribute="top" secondItem="jn1-A2-heg" secondAttribute="top" constant="15" id="NUm-4t-Qm9"/>
+                            <constraint firstItem="O2z-rr-igE" firstAttribute="leading" secondItem="jn1-A2-heg" secondAttribute="leading" id="UFA-u3-lY8"/>
+                            <constraint firstItem="jn1-A2-heg" firstAttribute="trailing" secondItem="O2z-rr-igE" secondAttribute="trailing" id="WbU-rj-Nps"/>
                             <constraint firstItem="W0c-de-gqZ" firstAttribute="leading" secondItem="jn1-A2-heg" secondAttribute="leading" constant="15" id="Yf3-UI-eqC"/>
-                            <constraint firstItem="dRj-3q-NVX" firstAttribute="leading" secondItem="W0c-de-gqZ" secondAttribute="trailing" constant="50" id="csi-dI-j2g"/>
+                            <constraint firstItem="jn1-A2-heg" firstAttribute="bottom" secondItem="O2z-rr-igE" secondAttribute="bottom" constant="10" id="iUe-nT-sNo"/>
+                            <constraint firstItem="O2z-rr-igE" firstAttribute="top" secondItem="np7-xt-ydg" secondAttribute="bottom" constant="10" id="pFx-5N-ESr"/>
+                            <constraint firstItem="jn1-A2-heg" firstAttribute="trailing" secondItem="np7-xt-ydg" secondAttribute="trailing" constant="20" id="xmZ-4K-Cch"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="O2z-rr-igE" id="LpB-h8-pFZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Oa-0d-aXG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
