--- a/IEEApps/IEEApps/Storyboards/Base.lproj/Main.storyboard
+++ b/IEEApps/IEEApps/Storyboards/Base.lproj/Main.storyboard
@@ -389,28 +389,39 @@
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="TagsCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TagsCell" id="oec-6R-vyY" customClass="TagsTableViewCell" customModule="IEEApps" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="50"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="45.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oec-6R-vyY" id="c8P-In-SxT">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="45.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JSt-BS-Ypk">
-                                                    <rect key="frame" x="25" y="15" width="369" height="16.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1QH-pF-Zch">
+                                                    <rect key="frame" x="55" y="11" width="339" height="18.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sS1-uB-ePx" customClass="CheckBoxBtn" customModule="IEEApps" customModuleProvider="target">
+                                                    <rect key="frame" x="10" y="11" width="30" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="Ltn-Ne-YgZ"/>
+                                                    </constraints>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" title="Button" image="CheckBoxUnChecked"/>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="JSt-BS-Ypk" firstAttribute="leading" secondItem="c8P-In-SxT" secondAttribute="leadingMargin" constant="5" id="6Na-Iu-mau"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="JSt-BS-Ypk" secondAttribute="trailing" id="Abz-my-ZRS"/>
-                                                <constraint firstItem="JSt-BS-Ypk" firstAttribute="top" secondItem="c8P-In-SxT" secondAttribute="top" constant="15" id="F4a-ju-Zch"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="JSt-BS-Ypk" secondAttribute="bottom" constant="7.5" id="cjp-id-asy"/>
+                                                <constraint firstItem="1QH-pF-Zch" firstAttribute="top" secondItem="c8P-In-SxT" secondAttribute="top" constant="11" id="6H0-JL-hBa"/>
+                                                <constraint firstItem="sS1-uB-ePx" firstAttribute="top" secondItem="c8P-In-SxT" secondAttribute="top" constant="11" id="HKu-zD-QAF"/>
+                                                <constraint firstItem="1QH-pF-Zch" firstAttribute="leading" secondItem="sS1-uB-ePx" secondAttribute="trailing" constant="15" id="Iae-ow-mS2"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="1QH-pF-Zch" secondAttribute="bottom" constant="5" id="fi3-2p-cJ4"/>
+                                                <constraint firstItem="1QH-pF-Zch" firstAttribute="trailing" secondItem="c8P-In-SxT" secondAttribute="trailingMargin" id="uOr-If-GBY"/>
+                                                <constraint firstItem="sS1-uB-ePx" firstAttribute="leading" secondItem="c8P-In-SxT" secondAttribute="leading" constant="10" id="yOY-4n-Nex"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="titleLabel" destination="JSt-BS-Ypk" id="lUL-xR-Ffn"/>
+                                            <outlet property="checkBoxBtn" destination="sS1-uB-ePx" id="mT4-XU-B1d"/>
+                                            <outlet property="titleLabel" destination="1QH-pF-Zch" id="21X-6k-N1w"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -435,7 +446,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Oa-0d-aXG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-542" y="1495"/>
+            <point key="canvasLocation" x="-1207" y="1500"/>
         </scene>
         <!--Notifications View Controller-->
         <scene sceneID="vYV-Sy-EqD">
@@ -799,6 +810,7 @@
     </scenes>
     <resources>
         <image name="256" width="64" height="64"/>
+        <image name="CheckBoxUnChecked" width="35" height="35"/>
         <image name="arrow.backward" catalog="system" width="128" height="98"/>
         <image name="bell.badge.fill" catalog="system" width="128" height="128"/>
         <image name="doc.text.fill" catalog="system" width="115" height="128"/>
