--- a/IEEApps/IEEApps/Storyboards/AnnouncementsDesktop.storyboard
+++ b/IEEApps/IEEApps/Storyboards/AnnouncementsDesktop.storyboard
@@ -17,7 +17,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VFY-eu-Qhk">
-                                <rect key="frame" x="15" y="59" width="45.5" height="31"/>
+                                <rect key="frame" x="15" y="59" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="a3S-o1-R0Y"/>
+                                    <constraint firstAttribute="height" constant="20" id="mTi-b6-r5P"/>
+                                </constraints>
                                 <color key="tintColor" systemColor="labelColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system"/>
@@ -26,24 +30,23 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HHL-FA-8aF">
-                                <rect key="frame" x="10" y="92" width="394" height="21.5"/>
+                                <rect key="frame" x="10" y="81" width="394" height="21.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ycH-SK-D73">
-                                <rect key="frame" x="0.0" y="133.5" width="414" height="728.5"/>
+                                <rect key="frame" x="0.0" y="122.5" width="414" height="739.5"/>
                                 <subviews>
                                     <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OPl-s6-ahV">
-                                        <rect key="frame" x="5" y="5" width="404" height="718.5"/>
-                                        <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <rect key="frame" x="5" y="5" width="404" height="729.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <wkWebViewConfiguration key="configuration">
                                             <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                             <wkPreferences key="preferences"/>
                                         </wkWebViewConfiguration>
                                     </wkWebView>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="OPl-s6-ahV" secondAttribute="trailing" constant="5" id="LMo-aa-CXX"/>
                                     <constraint firstItem="OPl-s6-ahV" firstAttribute="leading" secondItem="ycH-SK-D73" secondAttribute="leading" constant="5" id="Q06-AR-9rC"/>
@@ -73,74 +76,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="114" y="75"/>
-        </scene>
-        <!--AnnDestop-->
-        <scene sceneID="n0x-wO-iAq">
-            <objects>
-                <viewController storyboardIdentifier="PrivateAnnDesktop" title="AnnDestop" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BvP-Ty-NzX" customClass="PrivateAnnDesktop" customModule="IEEApps" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="bqJ-fz-fx5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pkE-pu-nGS">
-                                <rect key="frame" x="15" y="59" width="45.5" height="31"/>
-                                <color key="tintColor" systemColor="labelColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system"/>
-                                <connections>
-                                    <action selector="goBck:" destination="BvP-Ty-NzX" eventType="touchUpInside" id="vis-Oo-6tY"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pVE-hL-za0">
-                                <rect key="frame" x="10" y="92" width="394" height="21.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A8d-La-cfg">
-                                <rect key="frame" x="0.0" y="133.5" width="414" height="728.5"/>
-                                <subviews>
-                                    <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cPq-L2-LjX">
-                                        <rect key="frame" x="5" y="5" width="404" height="718.5"/>
-                                        <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <wkWebViewConfiguration key="configuration">
-                                            <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
-                                            <wkPreferences key="preferences"/>
-                                        </wkWebViewConfiguration>
-                                    </wkWebView>
-                                </subviews>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="cPq-L2-LjX" secondAttribute="trailing" constant="5" id="RCK-eu-e29"/>
-                                    <constraint firstItem="cPq-L2-LjX" firstAttribute="leading" secondItem="A8d-La-cfg" secondAttribute="leading" constant="5" id="UF9-w2-IO5"/>
-                                    <constraint firstAttribute="bottom" secondItem="cPq-L2-LjX" secondAttribute="bottom" constant="5" id="dxW-Ze-bAt"/>
-                                    <constraint firstItem="cPq-L2-LjX" firstAttribute="top" secondItem="A8d-La-cfg" secondAttribute="top" constant="5" id="o82-cp-gax"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="Q2u-4S-Ezv"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="pkE-pu-nGS" firstAttribute="leading" secondItem="Q2u-4S-Ezv" secondAttribute="leading" constant="15" id="1tL-X7-T7w"/>
-                            <constraint firstItem="A8d-La-cfg" firstAttribute="top" secondItem="pVE-hL-za0" secondAttribute="bottom" constant="20" id="22i-qs-HCm"/>
-                            <constraint firstItem="pkE-pu-nGS" firstAttribute="top" secondItem="Q2u-4S-Ezv" secondAttribute="top" constant="15" id="7Ug-kJ-0Z6"/>
-                            <constraint firstItem="Q2u-4S-Ezv" firstAttribute="bottom" secondItem="A8d-La-cfg" secondAttribute="bottom" id="ZfJ-Jy-19C"/>
-                            <constraint firstItem="A8d-La-cfg" firstAttribute="leading" secondItem="Q2u-4S-Ezv" secondAttribute="leading" id="jhb-P7-zio"/>
-                            <constraint firstItem="Q2u-4S-Ezv" firstAttribute="trailing" secondItem="pVE-hL-za0" secondAttribute="trailing" constant="10" id="n2y-od-1fs"/>
-                            <constraint firstItem="pVE-hL-za0" firstAttribute="top" secondItem="pkE-pu-nGS" secondAttribute="bottom" constant="2" id="p8f-CY-gwZ"/>
-                            <constraint firstItem="Q2u-4S-Ezv" firstAttribute="trailing" secondItem="A8d-La-cfg" secondAttribute="trailing" id="pfp-AS-C2t"/>
-                            <constraint firstItem="pVE-hL-za0" firstAttribute="leading" secondItem="Q2u-4S-Ezv" secondAttribute="leading" constant="10" id="yLX-gC-bsv"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="bodyWebView" destination="cPq-L2-LjX" id="4hq-Og-VsI"/>
-                        <outlet property="titleLabel" destination="pVE-hL-za0" id="XJm-fL-7X9"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Syy-AR-DLw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="768" y="75"/>
+            <point key="canvasLocation" x="113.04347826086958" y="75"/>
         </scene>
     </scenes>
     <resources>
